java_backup/java_11/tuition/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
G:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
G:\Program Files\BlueJ\lib\bluejcore.jar;G:\Program Files\BlueJ\lib\junit-4.8.2.jar;D:\JaVa\java_11\tuition
-d
D:\JaVa\java_11\tuition\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
G:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\JaVa\java_11\tuition\bank_account.java
<---- end of javadoc command ---->
Loading source file D:\JaVa\java_11\tuition\bank_account.java...
D:\JaVa\java_11\tuition\bank_account.java:11: error: empty character literal
        tac='';
            ^
D:\JaVa\java_11\tuition\bank_account.java:11: error: unclosed character literal
        tac='';
             ^
D:\JaVa\java_11\tuition\bank_account.java:57: error: reached end of file while parsing
        bank_account ob = new bank_account();
                                             ^
3 errors
